tests/infinite_type/fail_1.stderr
error[E0275]: overflow evaluating the requirement `mpstthree::binary::struct_trait::send::Send<N, Recv<N, Recv<SumOp<N>, mpstthree::binary::struct_trait::end::End>>>: std::marker::Send`
  --> tests/infinite_type/fail_1.rs:13:10
   |
13 |     More(Recv<N, Send<N, NiceSumServer<N>>>),
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required because it appears within the type `SumOp<N>`
  --> tests/infinite_type/fail_1.rs:12:6
   |
12 | enum SumOp<N: marker::Send + 'static> {
   |      ^^^^^
   = note: required because of the requirements on the impl of `Session` for `Recv<SumOp<N>, mpstthree::binary::struct_trait::end::End>`

error[E0275]: overflow evaluating the requirement `Recv<SumOp<i32>, mpstthree::binary::struct_trait::end::End>: Session`
  --> tests/infinite_type/fail_1.rs:20:23
   |
20 | fn nice_sum_server(s: NiceSumServer<i32>) -> Result<(), Box<dyn Error>> {
   |                       ^^^^^^^^^^^^^^^^^^
   |
   = note: required because of the requirements on the impl of `Session` for `Recv<i32, Recv<SumOp<i32>, mpstthree::binary::struct_trait::end::End>>`
   = note: required because it appears within the type `mpstthree::binary::struct_trait::send::Send<i32, Recv<i32, Recv<SumOp<i32>, mpstthree::binary::struct_trait::end::End>>>`
note: required because it appears within the type `SumOp<i32>`
  --> tests/infinite_type/fail_1.rs:12:6
   |
12 | enum SumOp<N: marker::Send + 'static> {
   |      ^^^^^
note: required by a bound in `Recv`
  --> src/binary/struct_trait/recv.rs:18:8
   |
18 |     T: marker::Send,
   |        ^^^^^^^^^^^^ required by this bound in `Recv`

error[E0275]: overflow evaluating the requirement `Recv<SumOp<i32>, mpstthree::binary::struct_trait::end::End>: Session`
  --> tests/infinite_type/fail_1.rs:24:29
   |
24 | fn nice_sum_server_accum(s: NiceSumServer<i32>, x: i32) -> Result<(), Box<dyn Error>> {
   |                             ^^^^^^^^^^^^^^^^^^
   |
   = note: required because of the requirements on the impl of `Session` for `Recv<i32, Recv<SumOp<i32>, mpstthree::binary::struct_trait::end::End>>`
   = note: required because it appears within the type `mpstthree::binary::struct_trait::send::Send<i32, Recv<i32, Recv<SumOp<i32>, mpstthree::binary::struct_trait::end::End>>>`
note: required because it appears within the type `SumOp<i32>`
  --> tests/infinite_type/fail_1.rs:12:6
   |
12 | enum SumOp<N: marker::Send + 'static> {
   |      ^^^^^
note: required by a bound in `Recv`
  --> src/binary/struct_trait/recv.rs:18:8
   |
18 |     T: marker::Send,
   |        ^^^^^^^^^^^^ required by this bound in `Recv`
